src/eapli.base/base.daemon.executor/src/main/java/base/daemon/executor/validacao.script/ValidaScript.g4
grammar ValidaScript;

prog: start;

start: start funcao
     | funcao
     ;

funcao: 'Ler ficheiro' PONTO_VIRGULA possivel_id=INTEIRO PONTO_VIRGULA ficheiro_script=ficheiro (PONTO_VIRGULA valor=valor_pretendido)?  #lerFicheiro
      | expressao #calcularValor
      | 'if ' expressao_a_verificar ' then:' aplicar_desconto temElse=else1? 'end if;' #aplicarDesconto
      | 'Valor total' #calcularDescontoEPreco
      | 'Send Email to: ' email=EMAIL #sendEmail
      | 'Send Email to: ' email=EMAIL ' Valor:' varValor=nameVar #sendEmailCalculos
      ;

else1: 'else' aplicar_desconto
     ;

expressao_a_verificar: leftPortion=param sinal=SINAL_BOOLEANO rightPortion=param
                     | leftPortionCat='CATEGORIA' sinal=('=='|'!=') rightPortionCat=PALAVRA
                     ;

aplicar_desconto: 'Aplicar Desconto->' valorDesconto=param //meter
                ;

expressao: nameVar '->' calculosMatematicos   #atribuir
         ;

calculosMatematicos: left=param sinal=MULT_DIV right=param    #multiDiv
                   | left=param sinal=SOMA_SUB right=param    #somaSub
                   | '(' calculosMatematicos ')'                #parenteses
                   | INTEIRO                                  #atribuiInteiro
                   | DOUBLE                                   #atribuiDouble
                   ;

param: nameVar  #variavel
     | INTEIRO  #proprioValor
     | DOUBLE   #valorDouble
     ;

valor_pretendido: ESCALAO
                | CATEGORIA
                | PRECO
                |
                ;

percentagem: DOUBLE '%'
           | INTEIRO '%'
           ;

frase: frase PALAVRA ' '
    | PALAVRA
    ;

nameVar: '#' PALAVRA '#';

ficheiro: path XML
        ;

path: path BARRA PALAVRA
    | PALAVRA
    ;

/*--------------------------------FILE--------------------------------*/

progFile: '<File>' startFile '</File>' //| EOF
        ;

startFile: startFile '<Produto>' infoProduto '</Produto>'   //#informacaoProduto
         | startFile '<Cliente>' infoCliente '</Cliente>'   //#informcacaoCliente
         |  //#vazio
         ;

infoProduto: '<Codigo>'  codigo=INTEIRO  '</Codigo>' '<Preco>'  preco=INTEIRO  '</Preco>' '<Categoria>'   categoria=PALAVRA  '</Categoria>'
           | '<Codigo>'  codigo=INTEIRO  '</Codigo>' '<Preco>'  preco=DOUBLE  '</Preco>' '<Categoria>'   categoria=PALAVRA  '</Categoria>'
           |
           ;

infoCliente: '<Numero>' numero=INTEIRO '</Numero>' '<Escalao>' escalao=PALAVRA '</Escalao>'
           |
           ;


SOMA_SUB: '+'
        | '-';
MULT_DIV: '*'
        | '/'
        ;
SINAL_BOOLEANO: '>'|'<'|'<='|'>='|'=';
SOMA: '+';
SUBTRACAO: '-';
MULT: '*';
BARRA: '/' ;
ESCALAO: 'Escalao';
PRECO: 'Preco';
CATEGORIA: 'Categoria';
INTEIRO: [0-9]+;
DOUBLE: [0-9]+('.'[0-9]+)?;
PONTO_VIRGULA: ';';
PALAVRA: [A-Za-z0-9]+;
EMAIL: [A-Za-z0-9]+('@gmail.com'|'@hotmail.com'|'@isep.ipp.pt');
XML: '.xml';
WS:[ \t\r\n]+->skip; //ignora espaços, tabs
